# cpputils

./: CMakeLists.txt
include/cpputils/: constexpr_for.hpp  debug.hpp  error.hpp  exception.hpp  fastvector.hpp  fixedstrng.hpp  iterator.hpp  memory.hpp  metafunctions.hpp  print.hpp  string.hpp  tuple.hpp  tupleutils.hpp  types.hpp  utility.hpp  validexpr.hpp  vector.hpp
